fix: 🐛 clients section images being overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -670,7 +670,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 /*-------------------------------------
         10. Clients
 --------------------------------------*/
-.clients {padding-top: 50px;}
+.clients {padding-top: 50px; overflow: hidden;}
 .clients-area {
     display: flex;
     align-items: center;
